add endpoint deactivate
